[package]
name = "cantor_macros"
version = "0.1.2"
edition = "2021"
authors = ["Dmitry Zamkov <dmitry94@gmail.com>"]
description = "Macros for cantor"
repository = "https://github.com/dzamkov/cantor"
license = "MIT OR Apache-2.0"

[lib]
name = "cantor_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }